# SensLink-Vision

./: README.md
RP2040 C++ Master/vehicle_platform/: CMakeLists.txt  vehicle.cpp
STM32 C Master/Ground_Station/: .cproject  .mxproject  .project  Ground_Station.ioc  Ground_Station.launch
STM32 C Master/Ground_Station/Core/Inc/: main.h  stm32f4xx_hal_conf.h
STM32 C Master/Ground_Station/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  usart.c
STM32 C Master/Ground_Station/Debug/: Ground_Station.elf  Ground_Station.list  Ground_Station.map  makefile  objects.list
STM32 C Master/Ground_Station/Debug/Core/Src/: LoRa.d  gpio.d  main.d  main.su  spi.d  stm32f4xx_hal_msp.d  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  usart.d  usart.su
STM32 C Master/Ground_Station/Debug/USB_DEVICE/App/: usb_device.d  usbd_cdc_if.d  usbd_desc.d
STM32 C Master/Sensor_Platform/: .cproject  .mxproject  .project  STM32F411CEUX_FLASH.ld  Sensor_Platform Debug.launch  Sensor_Platform.ioc
STM32 C Master/Sensor_Platform/Core/Inc/: BMP280.h  MPU6050.h  Type1IIR.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_uart_emul.h  stm32f4xx_it.h
STM32 C Master/Sensor_Platform/Core/Src/: BMP280.c  MPU6050.c  Type1IIR.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32 C Master/Sensor_Platform/Debug/: Sensor_Platform.elf  Sensor_Platform.list  Sensor_Platform.map  makefile  objects.list
STM32 C Master/Sensor_Platform/Release/: Sensor_Platform.map  makefile  objects.list
STM32 C Master/Sensor_Platform/USB_DEVICE/App/: usbd_cdc_if.c
(+124 files in other folders)
